# SoundSticher

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json
documentation/: LOGO_FLAT_DESIGN.psd
src/: app.d.ts  app.html
src-tauri/: 2  Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: combine.rs  encoder.rs  error.rs  lib.rs  metadata.rs  sample_playback.rs  sorting.rs  state.rs  timeline_playback.rs
src/lib/: EditableInput.svelte  Export.svelte  FileTable.svelte  Greet.svelte  LabelLayer.svelte  Plotted.svelte  PlottedInfo.svelte  Progress.svelte  Section.svelte  SineWaveShader.svelte  Sources.svelte  TimeRuler.svelte  Timeline.svelte  TimelineSegment.svelte  Toolbar.svelte  Waveform.svelte  format.ts
src/lib/state/: events.ts  export.ts  listeners.ts  performance.ts  position.ts  state.svelte.ts
src/lib/utils/: colors.ts  dragdrop.ts  examples.ts  format.ts
src/routes/: +layout.ts  +page.svelte
src/routes/debug/: +page.svelte
static/: FOLDER_ANIM.json  FOLDER_ANIM.lottie
static/css/: bootswatch.css  custom.css
~/.tauri/: myapp.key  myapp.key.pub
