[package]
name = "tauri-v2-sveltekit-template"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_v2_sveltekit_template_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = [] }
tauri-plugin-shell = "2.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
rodio = "0.20.1"
tokio = "1.46.1"
tauri-plugin-log = "2"
log = "0.4.27"
symphonia = "0.5.4"
lofty = "0.22.4"
sysinfo = "0.36.0"
hound = "3.5.1"

